--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.2",
+    "nodemailer": "^6.9.6",
     "twilio": "^4.18.1"
   }
 }
