--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.6.2",
     "nodemailer": "^6.9.6",
-    "twilio": "^4.18.1"
+    "twilio": "^4.18.1",
+    "validator": "^13.11.0"
   }
 }
