--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "mahendra",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1477.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -18,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.6",
     "twilio": "^4.18.1",
     "validator": "^13.11.0"
