--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.6",
+    "stripe": "^14.5.0",
     "twilio": "^4.18.1",
     "validator": "^13.11.0"
   }
